plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    
    implementation 'io.jsonwebtoken:jjwt:0.9.0'
    implementation 'javax.xml.bind:jaxb-api:2.3.0'
    
    implementation 'com.googlecode.json-simple:json-simple:1.1'
    
    implementation 'commons-io:commons-io:2.6'
    
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
    
    compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
    runtimeOnly 'com.h2database:h2'
    
    implementation (group: 'it.ozimov', name: 'embedded-redis', version: '0.7.3') {
	    exclude group: 'org.slf4j', module: 'slf4j-simple'
	}
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
}

test {
    useJUnitPlatform()
}

def querydslSrcDir = "src/main/generated"

tasks.withType(JavaCompile) {
    options.generatedSourceOutputDirectory = file(querydslSrcDir)
}

sourceSets {
    main {
        java {
            srcDirs += 'src/main/generated'
        }
    }
}

clean {
    delete file(querydslSrcDir)
}